# c-chess

./: .clang-format  .gitignore  2  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  build-run.sh  build_run.sh  cmake_install.cmake  gdb_build_run.sh
include/: board.h  moves.h  pieces.h
src/: board.c  main.c  moves.c  pieces.c
test/: test_board.c
